--- a/index.html
+++ b/index.html
@@ -2,7 +2,79 @@
 <html>
     <head>
         <title>Spiral</title>
+        <link rel="stylesheet" href="/css/main.css">
+
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="/js/main.js"></script>
     </head>
     <body>
+        <div class="golden">
+            <div class="golden-panel">
+                <div class="golden-panel">
+                    <div class="golden-panel">
+                        <div class="golden-panel">
+                            <div class="golden-panel">
+                                <div class="golden-panel">
+                                    <div class="golden-panel">
+                                        <div class="golden-panel">
+                                            <div class="golden-panel">
+                                                <div class="golden-panel">
+                                                    <div class="golden-panel">
+                                                        <div class="content">
+                                                            <h1>Title</h1>
+                                                            <p>This is content</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="content">
+                                                        <h1>Title</h1>
+                                                        <p>This is content</p>
+                                                    </div>
+                                                </div>
+                                                <div class="content">
+                                                    <h1>Title</h1>
+                                                    <p>This is content</p>
+                                                </div>
+                                            </div>
+                                            <div class="content">
+                                                <h1>Title</h1>
+                                                <p>This is content</p>
+                                            </div>
+                                        </div>
+                                        <div class="content">
+                                            <h1>Title</h1>
+                                            <p>This is content</p>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <h1>Title</h1>
+                                        <p>This is content</p>
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <h1>Title</h1>
+                                    <p>This is content</p>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <h1>Title</h1>
+                                <p>This is content</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <h1>Title</h1>
+                            <p>This is content</p>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h1>Title</h1>
+                        <p>This is content</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <h1>Title</h1>
+                    <p>This is content</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
